# webwork-pgml-linter

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  RUN_FULL_TEST.sh  VERSION  pip_requirements.txt  pyproject.toml
docs/: CHANGELOG.md  CODE_ARCHITECTURE.md  FILE_STRUCTURE.md  IMPROVEMENT_SUMMARY.md  INSTALL.md  LEGACY_DETECTION_PLAN.md  PARSER_IMPROVEMENTS_COMPLETE.md  PGML_LINT.md  PGML_LINT_ARCHITECTURE.md  PGML_LINT_CONCEPTS.md  PGML_LINT_EXAMPLES.md  PGML_LINT_PLUGINS.md  PGML_LINT_PLUGIN_DEV.md  PGML_LINT_PLUGIN_IDEAS.md  RANDOMIZATION_METHODS.md  REPO_STYLE.md  SESSION_SUMMARY.md  TESTING_DOCS_README.md  TESTING_GUIDE.md  TESTING_README.md  TESTING_SUMMARY.md  USAGE.md  lint_development_history.txt
pgml_lint/: core.py  engine.py  function_to_macro_pairs.py  parser.py  pg_version.py  pgml.py  rules.py
tests/: check_ascii_compliance.py  fix_ascii_compliance.py  fix_whitespace.py  pyrightconfig.json  test_ascii_compliance.py  test_bandit_security.py  test_devel_commit_changelog.py  test_devel_submit_to_pypi.py  test_import_rules.py  test_pgml_lint_core.py  test_pgml_lint_engine.py  test_pgml_lint_init_.py  test_pgml_lint_parser.py  test_pgml_lint_pgml.py  test_pgml_lint_plugins_block_markers.py  test_pgml_lint_plugins_block_rules.py  test_pgml_lint_plugins_document_pairs.py  test_pgml_lint_plugins_init_.py  test_pgml_lint_plugins_macro_rules.py  test_pgml_lint_plugins_pgml_ans_rule.py  test_pgml_lint_plugins_pgml_ans_style.py  test_pgml_lint_plugins_pgml_blank_assignments.py  test_pgml_lint_plugins_pgml_blanks.py  test_pgml_lint_plugins_pgml_blob_payloads.py  (+44 more)
(+51 files in other folders)
